# git-cbx

./: .bazelignore  .gitignore  CAREER_MODULE_FIX.md  COMPLETION_CHECKLIST.md  DELIVERY_CHECKLIST.md  DOCUMENTATION_INDEX.md  E2E_QUICK_GUIDE.md  E2E_TESTING_GUIDE.md  E2E_TEST_QUICKSTART.md  E2E_TEST_REPORT.md  FINAL_SUMMARY.md  FRONTEND_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MODULE.bazel  MODULE_REQUIREMENTS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REQUIREMENTS.md  REQUIREMENTS_CHANGELOG.md  REQUIREMENTS_INDEX.md  REQUIREMENTS_README.md  SESSION_COMPLETION_REPORT.md  SETUP_COMPLETE.txt  START_HERE.md  SURVEY_COMPLETE_FIX.md  SURVEY_FIX_NOTES.md  SURVEY_QUICK_FIX.md  SURVEY_SUBMIT_FIX.md  SURVEY_VIEW_LIVE_SOLUTION.md  TEST_IMPROVEMENT_SUMMARY.md  UI_UX_ENHANCEMENT_SUMMARY.md  WORKSPACE  career_test_results.txt  docker-compose.yml  e2e-health-check.ps1  implementation_plan.md  open-docs.ps1  (+11 more)
server/: BUILD.bazel  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py
server/routers/: accounting.py  auth.py  career.py  portal.py  supply.py  survey.py
web/: BUILD.bazel  package-lock.json  package.json  playwright.config.ts  test-results-full.txt  tsconfig.json
web/app/: auth-context.tsx  globals.css  layout.tsx  page.tsx
web/app/login/: page.tsx
web/app/portal/: page.tsx
web/app/portal/accounting/: page.tsx
web/app/portal/accounting/add/: page.tsx
web/app/portal/career/: page.tsx
web/app/portal/career/add/: page.tsx
web/app/portal/career/profile/: page.tsx
web/app/portal/profile/: page.tsx
web/app/portal/supply/: page.tsx
web/app/portal/survey/: page.tsx
web/app/register/: page.tsx
web/app/survey/[id]/: page.tsx
web/lib/: api.ts  utils.ts
web/playwright-report/: index.html
web/test-results/features-Accounting-Expens-08483-e-link-in-portal-navigation-chromium/: error-context.md
web/test-results/features-Accounting-Expens-df060-create-then-edit-an-expense-chromium/: error-context.md
web/test-results/features-User-Profile-Mana-6d4ba-ired-fields-in-profile-edit-chromium/: error-context.md
web/test-results/features-User-Profile-Mana-cdac3-t-user-profile-successfully-chromium/: error-context.md
web/test-results/features-User-Profile-Mana-e62e0-profile-edit-without-saving-chromium/: error-context.md
web/test-results/portal-Supply-Section-should-navigate-to-add-supply-entry-chromium/: error-context.md
web/test-results/portal-Survey-Section-should-navigate-to-create-survey-chromium/: error-context.md
web/tests/: .gitignore  README.md
web/tests/e2e/: api.spec.ts  auth.spec.ts  features.spec.ts  portal.spec.ts  user-journey.spec.ts
web/tests/fixtures/: auth.ts
(+12 files in other folders)
