module(
    name = "cbx_life",
    version = "0.0.1",
)

bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_js", version = "1.38.0")
bazel_dep(name = "aspect_rules_js", version = "1.38.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_oci", version = "1.7.4")
bazel_dep(name = "aspect_rules_ts", version = "2.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//server:requirements.txt",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    npm_package_lock = "//web:package-lock.json",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")
